# attestation_benchmarking

./: .gitignore  Cargo.toml  README.md
benches/: nsm.rs  nsm_api.rs  nsm_ioctl.rs
docker/: Dockerfile  id_rsa.pub  run.sh
results/: charts.R
src/: main.rs
terraform/: main.tf  nitro_startup.sh
tools/: build_image.sh  echo.py  fake_nsm.sh  nitro_instances.sh  run_benchmarks.sh  upload_benchmark.sh
