[package]
name = "attestation_benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-nitro-enclaves-nsm-api = "0.2.1"
criterion = {version = "0.4.0", features = ["html_reports"]}
libc = "0.2.142"
log = "0.4.17"
nix = "0.26.2"
#serde_bytes = "0.11.9"
env_logger = "0.10.0"

[[bench]]
name = "nsm"
harness = false
